--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^22.7.4",
     "jasmine-core": "~4.6.0",
     "karma-coverage": "~2.2.0",
     "typescript": "~5.0.2"
