--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,10 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+               "node_modules/jquery/dist/jquery.min.js"
+            ],
             "optimization": {
               "fonts": false
             }
