--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apexcharts": "^3.53.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.1",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.7.0",
     "rxjs": "~7.8.0",
